# cpmis-toolkit

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  justfile  malawi_districts.csv  pyproject.toml  requirements.txt
docs/cleanup/: ALGORITHM.md  overview.md  tasks.md
docs/sync/: CONTRIBUTING.md  overview.md
docs/transfer/: SUMMARY.md  TRANSFER_WORKING.md  WEB_UI_CACHE_FIX.md  WHAT_TRANSFER_DOES.md  overview.md  tasks.md
src/: __init__.py
src/cleanup/: __init__.py
src/cleanup/phase1/: create_ou_codes.py  export_org_units.py  push_ou_codes.py  standardize_names.py  update_ou_codes.py
src/cleanup/phase2/: apply_ids.py  bulk_assign.py  db_update.py  fetch_sample_teis.py  generate_all_ids.py  generate_ids.py  id_generator.py  list_programs.py  phase2_workflow.py
src/shared/: __init__.py  dhis2_client.py  id_utils.py  ou_picker.py  settings.py
src/sync/: __init__.py  batch_processor.py  cli.py  config.py  extractor.py  importer.py  utils.py  validator.py  verifier.py
src/transfer/: __init__.py  clear_dhis2_cache.py  engine.py  fetcher.py  id_generator.py  selector.py  transfer_workflow.py  verifier.py  verify_at_destination.py  verify_web_ui.py
